ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Check This!!
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.on.boarding.com
    http:
      paths:
      - path: /web-server(/|$)(.*) # # Check This!!
        pathType: Exact
        backend:
          service:
            name: flask-service
            port:
              number: 3307
